Grind now works on mobile; Move input field below play field on mobile; Add arrows to input field; Add stroke to input field so user can see touch area; Prevent warnings in chrome by adding touch-action: none; Fix width of game on screens >= 768px and <= 800px wide

--- a/akc/css/common.css
+++ b/akc/css/common.css
@@ -15,5 +15,6 @@ body {
   background-color: #fff;
   color: #000;
 
+  touch-action: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
